Prevent toolbar span text overflow on all pages

--- a/client/src/app/components/common/toolbar/toolbar.component.css
+++ b/client/src/app/components/common/toolbar/toolbar.component.css
@@ -5,10 +5,6 @@ mat-toolbar {
   z-index: 1000;
 }
 
-mat-toolbar span {
-  overflow: hidden;
-}
-
 .toolbar-spacer {
   flex: 1 1 auto;
 }
